Feat: error handling for iframe
falls back to preview card if iframe doesn't work, and added preview card that shows on the readmes

--- a/data/projects.json
+++ b/data/projects.json
@@ -4,7 +4,7 @@
     "name": "qtc-quant",
     "displayName": "qtc-quant",
     "githubUrl": "https://github.com/alqavii/qtc",
-    "demoUrl": "http://qtcq.xyz/",
+    "demoUrl": "https://qtcq.xyz/",
     "description": "An example project to demonstrate the portfolio"
   },
   {
