Feat: Preview card
there is now  a preview card that can be accessed in the readme

--- a/data/projects.json
+++ b/data/projects.json
@@ -5,7 +5,7 @@
     "displayName": "qtc-quant",
     "githubUrl": "https://github.com/alqavii/qtc",
     "demoUrl": "https://qtcq.xyz/",
-    "description": "An example project to demonstrate the portfolio"
+    "description": "Trading platform for QT Capital Alpha"
   },
   {
     "id": "volsurface",
