--- a/data/projects.json
+++ b/data/projects.json
@@ -12,7 +12,7 @@
     "name": "volsurface",
     "displayName": "volsurface",
     "githubUrl": "https://github.com/alqavii/volsurface",
-    "demoUrl": "http://volsurface.xyz/",
+    "demoUrl": "https://volsurface.onrender.com",
     "description": "An example project to demonstrate the portfolio"
   }
 ]
